force-app/main/default/objects/Trail_Progress__c/Trail_Progress__c.object-meta.xml
<CustomObject>
    <label>Trail Progress</label>
    <nameField>
        <label>Trail Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trail Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>