force-app/main/default/objects/Trail_Progress__c/fields/Amount_Of_Modules__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Modules__c</fullName>
    <formula>Trail__r.Amount_Of_Modules__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Of Modules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>