force-app/main/default/objects/Trail_Progress__c/fields/Completed_Modules__c.field-meta.xml
<CustomField>
    <fullName>Completed_Modules__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Modules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>